--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./popup.css">
+        <script src="./popup.js"></script>
     </head>
 
-    <div class="container">
-        <h1>Make WhatsApp more easier to use</h1>
-    </div>
+    <body>
+        <p>Select Language:</p>
+        <select id="language">
+            <option value=""></option>
+            <option value="en">English</option>
+            <option value="es">Spanish</option>
+            <option value="fr">French</option>
+            <option value="de">German</option>
+            <option value="th">Thailand</option>
+            <option value="ms">Malay</option>
+            <option value="id">Indonesian</option>
+        </select>
+    </body>
 
 </html>
