--- a/popup.html
+++ b/popup.html
@@ -12,11 +12,17 @@
             <option value=""></option>
             <option value="en">English</option>
             <option value="es">Spanish</option>
+            <option value="pt">Portuguese</option>
             <option value="fr">French</option>
             <option value="de">German</option>
+            <option value="it">Italian</option>
             <option value="th">Thailand</option>
             <option value="ms">Malay</option>
             <option value="id">Indonesian</option>
+            <option value="zh-CN">Chinese (Simplified)</option>
+            <option value="zh-TW">Chinese (Traditional)</option>
+            <option value="ja">Japanese</option>
+            <option value="ko">Korean</option>
         </select>
     </body>
 
