--- a/options.html
+++ b/options.html
@@ -9,10 +9,28 @@
     <body>
         <div>
             <div id="status" style="color: green;"></div>
-            <p>Select Language:</p>
-            <select id="language">
+            <p>Source Language:</p>
+            <select id="source_language">
                 <option value=""></option>
                 <option value="en">English</option>
+                <option value="es">Spanish</option>
+                <option value="pt">Portuguese</option>
+                <option value="fr">French</option>
+                <option value="de">German</option>
+                <option value="it">Italian</option>
+                <option value="th">Thailand</option>
+                <option value="ms">Malay</option>
+                <option value="id">Indonesian</option>
+                <option value="zh-CN"  selected="selected">Chinese (Simplified)</option>
+                <option value="zh-TW">Chinese (Traditional)</option>
+                <option value="ja">Japanese</option>
+                <option value="ko">Korean</option>
+            </select>    
+
+            <p>Target Language:</p>
+            <select id="target_language">
+                <option value=""></option>
+                <option value="en" selected="selected">English</option>
                 <option value="es">Spanish</option>
                 <option value="pt">Portuguese</option>
                 <option value="fr">French</option>
