--- a/options.html
+++ b/options.html
@@ -12,17 +12,19 @@
             <p>Source Language:</p>
             <select id="source_language">
                 <option value=""></option>
+                <option value="zh-CN"  selected="selected">Chinese (Simplified)</option>
+                <option value="zh-TW">Chinese (Traditional)</option>
                 <option value="en">English</option>
                 <option value="es">Spanish</option>
                 <option value="pt">Portuguese</option>
                 <option value="fr">French</option>
                 <option value="de">German</option>
                 <option value="it">Italian</option>
+                <option value="ru">Russian</option>
                 <option value="th">Thailand</option>
                 <option value="ms">Malay</option>
+                <option value="vi">Vietnamese</option>
                 <option value="id">Indonesian</option>
-                <option value="zh-CN"  selected="selected">Chinese (Simplified)</option>
-                <option value="zh-TW">Chinese (Traditional)</option>
                 <option value="ja">Japanese</option>
                 <option value="ko">Korean</option>
             </select>    
@@ -36,13 +38,15 @@
                 <option value="fr">French</option>
                 <option value="de">German</option>
                 <option value="it">Italian</option>
+                <option value="ru">Russian</option>
                 <option value="th">Thailand</option>
                 <option value="ms">Malay</option>
+                <option value="vi">Vietnamese</option>
                 <option value="id">Indonesian</option>
-                <option value="zh-CN">Chinese (Simplified)</option>
-                <option value="zh-TW">Chinese (Traditional)</option>
                 <option value="ja">Japanese</option>
                 <option value="ko">Korean</option>
+                <option value="zh-CN">Chinese (Simplified)</option>
+                <option value="zh-TW">Chinese (Traditional)</option>
             </select>    
         </div>
         
